--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
-    "bootstrap": "3.3.7",
+    "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.3",
     "npm": "^6.4.1",
+    "popper.js": "^1.14.4",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
@@ -18,7 +20,7 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
