--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ app.log
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-client/node_modules
+client/node_modules/
 
 # testing
 /coverage
