--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.5.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chance": "^1.0.16",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.3",
@@ -18,7 +19,8 @@
     "react-dom": "^16.5.1",
     "react-notification-system": "^0.2.17",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
