--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "chance": "^1.0.16",
     "classnames": "^2.2.6",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.3",
     "npm": "^6.4.1",
